Implemented support for a version endpoint.
