# src/Api.Core.SolarMeasurementsProxy/AutoGeneratedProxyClasses/Models/VersionDto.cs
@@ -1,0 +1,78 @@
+// <auto-generated>
+// Code generated by Microsoft (R) AutoRest Code Generator.
+// Changes may cause incorrect behavior and will be lost if the code is
+// regenerated.
+// </auto-generated>
+
+namespace Api.Core.SolarMeasurementsProxy.Models
+{
+    using Newtonsoft.Json;
+    using System.Linq;
+
+    public partial class VersionDto
+    {
+        /// <summary>
+        /// Initializes a new instance of the VersionDto class.
+        /// </summary>
+        public VersionDto()
+        {
+            CustomInit();
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the VersionDto class.
+        /// </summary>
+        public VersionDto(string apiVersion = default(string), string assemblyVersion = default(string), string fullVersion = default(string), string commitSha = default(string), string commitBranch = default(string), string buildTime = default(string), string buildConfiguration = default(string))
+        {
+            ApiVersion = apiVersion;
+            AssemblyVersion = assemblyVersion;
+            FullVersion = fullVersion;
+            CommitSha = commitSha;
+            CommitBranch = commitBranch;
+            BuildTime = buildTime;
+            BuildConfiguration = buildConfiguration;
+            CustomInit();
+        }
+
+        /// <summary>
+        /// An initialization method that performs custom operations like setting defaults
+        /// </summary>
+        partial void CustomInit();
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "apiVersion")]
+        public string ApiVersion { get; set; }
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "assemblyVersion")]
+        public string AssemblyVersion { get; set; }
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "fullVersion")]
+        public string FullVersion { get; set; }
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "commitSha")]
+        public string CommitSha { get; set; }
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "commitBranch")]
+        public string CommitBranch { get; set; }
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "buildTime")]
+        public string BuildTime { get; set; }
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "buildConfiguration")]
+        public string BuildConfiguration { get; set; }
+
+    }
+}
